Implement project management CRUD APIs